index about firebase

--- a/about.html
+++ b/about.html
@@ -1,7 +1,123 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <body>
+        <title>Sewing Project Manager </title>
+        <!--LEAVE the html alone edit the urls as needed  -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-4 m-4">
+            <a class="navbar-brand" href="http://www.sue-a-darby.com/sewingpm/index.html">📏 Sewing Project Manager
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="about.html">About</span></a>
+                    <a class="nav-link" href="news.html">News</a>
+                    <a class="nav-link" href="welcome.html">Welcome</a>
+                </div>
+            </div>
+        </nav>
+
+<div class="container dash main content bd-content flex-column ">
+    <section class="container pt-5 ">
+        <h2>About The App</h2>
+    </section>
+    <section class="container">
+        <p>This project is being started in July of 2020. The idea has been percolating for a number of years as I have
+            been sewing for a long time. The primary reason I'm building my copy of the app is to literally track my
+            sewing projects. At first it was just to track patterns and then I realized I needed to track fabric and
+            notions as well as trims and various tools used for sewing and pattern making.</p>
+        <p>As the specifications were being developed for sewing I realized that it could work for knitting & crochet to
+            track needles, hooks, patterns and yarn. I know many people who have "too much yarn" but don't really know
+            what they have. Seamstresses, knitters and crocheters all have some of the same issues with tracking tools
+            and patterns... "do I have a____?" or "where did I see the pattern for ___?".</p>
+        <p>Additionally I've seen the same thing with just about every other hobby and a lot of professionals too.
+            Tracking supply inventory is just as important in the business world as it is for the rest of us.</p>
+        <p>I plan to document my journey building this tool and then how to modify it for other purposes. When I finish
+            a bit more I will share and post the Git Hub for it.</p>
+        <h3>About the Coder</h3>
+        <br>
+        <p>The chatty coder who wrote all of the above is Sue Darby who also goes by Lady Code Monkey. She enjoys code
+            and fiddling with little projects but it is time for her to "grow up" and build something more serious.
+        </p>
+        <p>Sue has built some serious things unfortunately she can't show those off online because they are for previous
+            jobs hence this little corner of the web.</p>
+        <p>Sue has been coding off and on since she was about 8. She started in Basic A, moved to old school DOS then
+            into HTML, CSS, Javascript, a dash of Perl and has dabbled in several frameworks. You will notice this site
+            is build on BootStrap just to make life easier. That doesn't mean that it is vanilla BootStrap as there
+            are plenty of customizations.</p>
+    </section>
+    <section class="container">
+        <h4>Other Projects</h4>
+        <p>Remember that HTML stuff from above...I've done many sites in straight HTML and long since taken them down
+            but I have been building and maintaining many WordPress based sites for a number of years. I am definitely
+            not afraid of the PHP or tweaking the CSS manually on any of my other sites.</p>
+        <p>You can find a list of my sites below:</p>
+    </section>
+    <section class='container'>
+        <h1>Website Network</h1>
+    </section>
+    <section class="container">
+        <!--start-->
+        <div class="row">
+            <!--Portfolio-->
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Portfolio &amp; Photography</h5>
+                        <p class="card-text">
+                        <ul>
+                            <li class="nav-link"> <a href="http://www.sue-a-darby.com/" target="_blank">
+                                    ☑ Portfolio
+                                </a></li>
+                            <li class="nav-link"> <a href="http://www.work-samples.sue-a-darby.com/" target="_blank">
+                                    ☑ Photography
+                                </a></li>
+                            <li class="nav-link"> <a href="http://codemonkey.sue-a-darby.com/" target="_blank">
+                                    ☑ Code Monkey </a></li>
+                            <li class="nav-link"> <a href="http://ladycodemonkey.sue-a-darby.com/" target="_blank">
+                                    ☑ LadyCode Monkey</a></li>
+                            <li class="nav-link"> <a href="https://www.linkedin.com/in/suedarby/">
+                                    ☑ LinkedIn
+                                </a></li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <!--STC-->
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Sue's Tiny Costumes</h5>
+                        <p class="card-text">
+                        <ul>
+                            <li class="nav-link"> <a href="http://suestinycostumes.com/" target="_blank">☑ Sue's Tiny
+                                    Costumes </a></li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+                <footer class="container mt-3 center">
+                    <div class="border-top flex-column row">
+                        <div>
+                            <p class="text-center small">Copyright &copy; 2021 Sue Darby</p>
+                            <p class="text-center small">Application is created by <a href="http://www.sue-a-darby.com">Sue
+                                    Darby.</p>
+                        </div>
+                    </div>
+                    <div class="mt-3 mb-3"></div>
+                </footer>
+        </div>
+    </body>
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </html>
