--- a/Shopping List/index.html
+++ b/Shopping List/index.html
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title> Shopping List </title>
-		<link rel="stylesheet" href="style.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-	</head> <br>
+  <head>
+    <title>Shopping List</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <br />
 
-	<body>
-		<h1 class="center"> Shopping List </h1><br>
+  <body>
+    <h1 class="center">Shopping List</h1>
+    <br />
 
-		<table class="center">
-			<thead>
-			<tr>
-			<th>Name</th>
-			<th>Quantity</th>
-			<th>Price</th>
-			<th>Total</th>
-			<th>Store</th>
-			<th>Store Link</th>
-			<th> Purchased </th>
-			</tr>
-			</thead>
+    <div class="list">
+      <table class="center">
+        <thead>
+          <tr class="table-header">
+            <td></td>
+            <td input type="text" class="table">Name</td>
 
-			<tbody>
-				<tr>
-					<td> Wicks </td>
-					<td> 10 </td>
-					<td> $1 </td>
-					<td> $10 </td>
-					<td> Amazon </td>
-					<td> http:// </td>
-					<td>
-						<input type="checkbox" id="yes" value="yes">
-						<label for ="yes"> Yes </label>
-						<input type="checkbox" id="no" value="no">
-						<label for ="no"> No </label>
-					</td>
-				</tr>
-				</tbody>
-		</table>
-		<br>
+            <td input type="text" class="table">
+              Type
+              <select>
+                <option value="Vegetables">Vegetables</option>
+                <option value="Fruits">Fruits</option>
+                <option value="Grains">Grains</option>
+                <option value="Canned Goods">Canned Goods</option>
+                <option value="Snacks">Snacks</option>
+                <option value="Beverages">Beverages</option>
+                <option value="Meat">Meat</option>
+                <option value="Dairy">Dairy</option>
+                <option value="Frozen">Frozen</option>
+                <option value="Household">Household</option>
+              </select>
+            </td>
 
-		<div class="center">
-			<h2> Notes </h2>
-			<textarea class="center" rows="10" cols="50" name="notes" placeholder="Write Any Notes Here"></textarea>
-		</div> <br>
+            <td input type="text" class="table">Store</td>
 
-		<script src="script.js"></script>
-	</body>
+            <td>Quantity
+             <input type="number" ng-model="quantity">
+            </td>
 
+            <td> Price
+              <input type="number" ng-model="price">
+            </td>
+           
+            <td input type="number" id="total">Total </td>
+
+            <td class="center">Delete</td>
+
+            <td class="center">Store Link</td>
+
+            <td class="center">Purchased
+              <input type="checkbox" id="yes" value="yes" />
+              <label for="yes"> Yes </label>
+              <input type="checkbox" id="no" value="no" />
+              <label for="no"> No </label>
+            </td> <br>
+          </tr>
+        </thead> <br>
+
+    <div class="center">
+      <h2>Notes</h2><br>
+      <textarea
+        class="center"
+        rows="10"
+        cols="50"
+        name="notes"
+        placeholder="Write Any Notes Here"
+      ></textarea>
+    </div>
+    <br />
+
+    <script src="script.js"></script>
+  </body>
 </html>
