--- a/Shopping List/index.html
+++ b/Shopping List/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Shopping List</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <br />
@@ -38,16 +37,14 @@
             <td input type="text" class="table">Store</td>
 
             <td>Quantity
-             <input type="number" ng-model="quantity">
+             <input type="number" id="quantity">
             </td>
 
             <td> Price
-              <input type="number" ng-model="price">
+              <input type="number" id="price">
             </td>
            
-            <td input type="number" id="total">Total </td>
-
-            <td class="center">Delete</td>
+            <td id="total">Total: <span id="totalPrice"> <input type="number"> </span> </td>
 
             <td class="center">Store Link</td>
 
@@ -57,6 +54,7 @@
               <input type="checkbox" id="no" value="no" />
               <label for="no"> No </label>
             </td> <br>
+
           </tr>
         </thead> <br>
 
