--- a/Shopping List/index.html
+++ b/Shopping List/index.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shopping List</title>
+    <title> Shopping List </title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <br />
 
   <body>
-    <h1 class="center">Shopping List</h1>
+    <h1 class="center"> Shopping List </h1>
     <br />
 
-    <div class="list">
-      <table class="center">
-        <thead>
-          <tr class="table-header">
-            <td></td>
-            <td input type="text" class="table">Name</td>
+    <div class="container">
+      <form id="shopping">
 
-            <td input type="text" class="table">
-              Type
-              <select>
-                <option value="Vegetables">Vegetables</option>
-                <option value="Fruits">Fruits</option>
-                <option value="Grains">Grains</option>
-                <option value="Canned Goods">Canned Goods</option>
-                <option value="Snacks">Snacks</option>
-                <option value="Beverages">Beverages</option>
-                <option value="Meat">Meat</option>
-                <option value="Dairy">Dairy</option>
-                <option value="Frozen">Frozen</option>
-                <option value="Household">Household</option>
-              </select>
-            </td>
+        <label for="shopping">Add an item</label>
+        <input type="text" name="shopping" class="shopping" placeholder="e.g., broccoli"> <br>
 
-            <td input type="text" class="table">Store</td>
+        <label for="shopping"class="shopping"> Type </label>
+        <select>
+          <option value="Vegetables">Vegetables</option>
+          <option value="Fruits">Fruits</option>
+          <option value="Grains">Grains</option>
+          <option value="Canned Goods">Canned Goods</option>
+          <option value="Snacks">Snacks</option>
+          <option value="Beverages">Beverages</option>
+          <option value="Meat">Meat</option>
+          <option value="Dairy">Dairy</option>
+          <option value="Frozen">Frozen</option>
+          <option value="Household">Household</option>
+        </select><br>
 
-            <td>Quantity
-             <input type="number" id="quantity">
-            </td>
+        <label for="shopping"> Store </label>
+        <input type="text" name="store" class="shopping"><br>
 
-            <td> Price
-              <input type="number" id="price">
-            </td>
-           
-            <td id="total">Total: <span id="totalPrice"> <input type="number"> </span> </td>
+        <label for="shopping"> Quantity </label>
+        <input type="number" name="quantity" class="shopping"><br>
 
-            <td class="center">Store Link</td>
+        <label for="shopping"> Price </label>
+        <input type="number" name="price" class="shopping"><br>
 
-            <td class="center">Purchased
-              <input type="checkbox" id="yes" value="yes" />
-              <label for="yes"> Yes </label>
-              <input type="checkbox" id="no" value="no" />
-              <label for="no"> No </label>
-            </td> <br>
+        <label for="shopping"> Total Price <label>
+        <input type="number" name="totalPrice" class="shopping"><br>
+        <br>
 
-          </tr>
-        </thead> <br>
+        <label for="shopping" name="purchased" class="shopping"> Purchased <label>
+        <br>
+
+        <input type="checkbox"  />
+        <label for="yes"> Yes </label>
+        <input type="checkbox" id="no" value="no" />
+        <label for="no"> No </label> <br>
+
+        <br>
+
+        <button class="button"> <h1> Save List </h1></button>
+
+      </form>
+    </div><br>
+
 
     <div class="center">
       <h2>Notes</h2><br>
@@ -69,6 +71,9 @@
       ></textarea>
     </div>
     <br />
+
+  
+     
 
     <script src="script.js"></script>
   </body>
