Naviagtion added to all sites

--- a/Shopping List/index.html
+++ b/Shopping List/index.html
@@ -7,6 +7,44 @@
 	</head> <br>
 
 	<body>
+
+		<!-- Naviagtion Bootstrap -->
+		<p>
+			<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+				aria-expanded="true" aria-controls="collapseWidthExample">
+				Menu Options
+			</button>
+		
+			<div style="min-height: 120px;">
+				<div class="collapse-horizontal collapse show" id="collapseWidthExample">
+					<div class="card card-body" style="width: 300px;">
+						<!-- Drop down list -->
+						<!-- Home Button -->
+						<a href="home.html" class="list-group-item list-group-item-action">
+							Home
+						</a>
+			
+						<!-- Dashboard Button-->
+						<a href="content\dashboard.html" class="list-group-item list-group-item-action">
+							Dashboard
+						</a>
+			
+						<!--Orders Button-->
+						<a href="Shopping List\index.html" class="list-group-item list-group-item-action">
+							Orders
+						</a>
+			
+						<!-- Project Ideas -->
+						<a href="content\project.html" class="list-group-item list-group-item-action">
+							Projects
+						</a>
+						<!-- Dropdown -->
+					</div>
+				</div>
+			</div>
+		</p>
+		<!--- End of Navigation -->
+
 		<h1 class="center"> Shopping List </h1><br>
 
 		<table class="center">
