--- a/content/budget.html
+++ b/content/budget.html
@@ -8,47 +8,30 @@
   </head>
   
   <body>
+  <div class="container">
+      <div class="justify-content-between flex-wrap  align-items-top pb-2 mb-3 border-bottom">
+        <h2>Do I have enough for this project?</h2>
+        <p class="lead">
+          Welcome to Project Planning! This is where you set your budget and track your spending.
+        </p>
+      </div>
 
-    <div class="container">
-      <main role="main" class="dash main content bd-content pt-3 mt-3">
-          <section class="container">
-              <div class="flex-column">
-                  <div class="row">
-                      <div class="justify-content-between flex-wrap  align-items-top pb-2 mb-3 border-bottom">
-                          <h2>Do I have enough for this project?</h2>
-                          <p class="lead">
-                            Welcome to Project Planning! This is where you set your budget and track your spending.
-                          </p>
-                      </div>
+      <div class="grid" style="--bs-gap: 5rem;">
+        <label for="budget" class="col-sm-2"> Project Budget: $</label>
+          <div class="col-md-5">
+            <input type="data" class="form-control" id="budget">
+          </div>
 
-                      <form>
-                        <div class="row 1">
-                            <label for="budget" class="col-sm-2 col-form-label"> Project Budget: $</label>
-                            <div class="col-md-5">
-                              <input type="data" class="form-control" id="budget">
-                            </div>
-                        </div>
+        <label for="budget" class="col-sm-2 col-form-label">Total Amount spent:</label>
+          <div class="col-md-5">
+            <input type="data" class="form-control" id="budget">
+          </div>
 
-                        <p></p>
-
-                        <div class="row 2">
-                          <label for="budget" class="col-sm-2 col-form-label">Total Amount spent:</label>
-                          <div class="col-md-5">
-                            <input type="data" class="form-control" id="budget">
-                          </div>
-                        </div>
-
-                        <p></p>
-
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </form>
-                  </div>
-              </div>
-          </section>
-      </main>
-    </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+      </div>
+  </div>
 
   </body>
 </html>
