comments on idea list and shopping list

--- a/IdeaList/index.html
+++ b/IdeaList/index.html
@@ -12,7 +12,7 @@
 	</div>
 	
 	<form class="center">
-
+<!--collection idea_list-->
 		<label for="projectDate">Project Date</label>
 		<input type="date" required id="Project Date" /><br />
 
@@ -25,12 +25,12 @@
 				<option value="SM"> Soap Making </option>
 				<option value="C"> Candles </option>
 		 	 </select> <br>
-  
+  <!--Category? Tags?-->
 	</form> <br>
 
 <h2 class="center">Materials Needed </h2>
 <ol bold id="materialsNeeded" class="materialsNeeded"><br>
-
+<!--Repeatable data entry form. Enter item, cost, qty add to list with running total of cost*qty=result and sum of result similar to a ToDo list function Horizontal layout -->
   <ul class="center"> Item 1 </ul> <br>
 	<ol>
 	<ul class="center"> Quantity</ul> <br>
