--- a/Shopping List/index.html
+++ b/Shopping List/index.html
@@ -21,7 +21,7 @@
 			<th> Purchased </th>
 			</tr>
 			</thead>
-
+<!--Links in Project Name to tie the supply to a project-->
 			<tbody>
 				<tr>
 					<td> Wicks </td>
