--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                     <img src="Images\pexels-chris-f-3563556.jpg" class="d-block w-100" alt="..." style="width: 50px;height: 550px;">
                     </div>
                     <div class="carousel-item">
-                    <img src="Images\pexels-surene-palvie-2062061.jpg" class="d-block w-100" alt="..." style="width: 50;height: 550px;">
+                    <img src="Images\pexels-surene-palvie-2062061.jpg" class="d-block w-100" alt="..." style="width: 50px;height: 550px;">
                     </div>
                     <div class="carousel-item">
                     <img src="Images\pexels-surene-palvie-2062069.jpg" class="d-block w-100" alt="..." style="width: 50px;height: 550px;">
