Update idea list
update idea list

--- a/IdeaList/index.html
+++ b/IdeaList/index.html
@@ -27,8 +27,10 @@
 		 	 </select> <br>
   <!--Category? Tags?-->
 	</form> <br>
+	
 <!--Form idea #2-->
-<form method="POST">
+<form name="form1"onsubmit="false"method="POST">
+
 	<table class="horizontal">
 		<tr>
 			<td class="center">
@@ -70,6 +72,9 @@
 					</td>
 				</tr>
 		</tr>
+	</form>
+<!--form 1 ends here-->
+
 
 <ol bold id="materialsNeeded" class="materialsNeeded"><br>
 <!--Repeatable data entry form. Enter item, cost, qty add to list with running total of cost*qty=result and sum of result similar to a ToDo list function Horizontal layout -->
