--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 
     <body>
         <!-- Slideshow-->
+        <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -35,9 +36,11 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+        </div>
         <!-- End of Slides -->
 
         <!-- Naviagtion Bootstrap -->
+    <div>
         <p>
             <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
                 aria-expanded="true" aria-controls="collapseWidthExample">
@@ -72,6 +75,7 @@
             </div>
         </div>
         </p>
+    </div>
         <!--- End of Navigation -->
 
         <!--Body Text -->
@@ -98,13 +102,12 @@
                 </section>
             </main>
         </div>
-    </body>
+  
     <!--End of Body-->
 
     <!-- Footer Bootstrap-->
         <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+        <footer>
         <div class="container">
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -115,7 +118,9 @@
                 <p class="text-center text-muted">© 2021 Company, Inc</p>
             </footer>
         </div>
+    </footer>
     <!-- End of Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
