--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="../src/controllers/firebase.js"></script>
-    <title>React App</title>
+    <title>Crafting Project Manager</title>
   </head>
   <body>
+
+    <!--
     <header>
       <div class="px-3 py-2 bg-dark text-white">
         <div class="container">
@@ -72,7 +74,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header>-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -85,6 +87,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--
     <div class="container">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -97,7 +100,7 @@
         <p class="text-center text-muted">© 2021 Company, Inc</p>
       </footer>
     </div>
-  
+  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
