Commit #2 to task list
Commit #2 to task list. added save, cancel, and delete buttons.

--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<header>
+	<head>
+		<title> Task List </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="style.css" />
 
-	</header>
+	</head>
+
 	<body>
 	
 		<div class="container">
 			<div class="app">
-			  <h1>Task List </h1>
+				<header>
+					<h1> Task List </h1>
+				</header>
+			  
 
 			<form>
-			<input type="text" placeholder="Add new task...">
-			<button type="submit">&plus;</button>
+				<input type="text" placeholder="Add new task...">
+				<button type="submit">&plus;</button>
 			</form>
 
 		<ul>
@@ -22,7 +29,14 @@
 			</li>
 		  </ul>
 			</div>
+		</div><br>
+
+		<div class="center">
+			<button class="btn btn-success btn-lg"> Save and Submit </button>
+			<button class="btn btn-success btn-lg"> Cancel </button>
+			<button class="btn btn-success btn-lg"> Delete </button>
 		</div>
-		
+
+	<script src="script.js"></script>
 	</body>
 </html>
