--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -1,42 +1,72 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title> Task List </title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="style.css" />
+  <head>
+    <title>Task List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-	</head>
+  <body>
+    <div class="container">
+      <div class="app">
+        <header>
+          <h1>Task List</h1>
+        </header>
 
-	<body>
-	
-		<div class="container">
-			<div class="app">
-				<header>
-					<h1> Task List </h1>
-				</header>
-			  
+	<!--taskList-->
 
-			<form>
-				<input type="text" placeholder="Add new task...">
-				<button type="submit">&plus;</button>
-			</form>
+        <form>
+          <input type="text" placeholder="Add new task..." />
+          <button type="submit">&plus;</button>
+        </form>
 
-		<ul>
+        <ul>
 			<li>
-			  <input type="checkbox" onclick="taskComplete(this)" class="check">
-			  <input type="text" value="My Task" class="task" onfocus="getCurrentTask(this)" onblur="editTask(this)">
+			  <input type="checkbox" onclick="taskComplete(this)" class="check" />
+			  <input
+				type="text"
+				value="My Task"
+				class="task"
+				onfocus="getCurrentTask(this)"
+				onblur="editTask(this)"
+			  />
 			  <i class="fa fa-trash" onclick="removeTask(this)"></i>
 			</li>
 		  </ul>
-			</div>
-		</div><br>
+    
+    <br />
 
-		<div class="center">
-			<button class="btn btn-success btn-lg"> Save and Submit </button>
-			<button class="btn btn-success btn-lg"> Cancel </button>
-			<button class="btn btn-success btn-lg"> Delete </button>
-		</div>
 
-	<script src="script.js"></script>
-	</body>
+<!--buttons-->
+    <div class="button">
+      <button
+        type="button"
+        id="save"
+        value="save"
+        onclick="saveTask()"
+      >
+        Save and Submit
+      </button>
+
+      <button
+        type="button"
+        id="reset"
+        value="reset"
+        onclick="resetTask()"
+      >
+        Reset 
+      </button>
+
+      <button
+        type="button"
+        id="del"
+        value="delete"
+        onclick="deleteTask()"
+      >
+        Delete
+      </button>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
