--- a/Task-manager-main/public/index.html
+++ b/Task-manager-main/public/index.html
@@ -27,6 +27,7 @@
     <title>Craft Project</title>
   </head>
   <body>
+<!--<HEADER />-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
