--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -7,46 +7,39 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="app">
-        <header>
-          <h1>Task List</h1>
-        </header>
-
+    <main>
+      <div class="container">
+        <div class="app">
+          <header>
+           <h1 class="todo">Task List</h1>
+           <ul class="todo-list js-todo-list"></ul>
+         </header>
+        </div>
+      </div>
+      </main>
 	<!--taskList-->
 
-        <form>
-          <input type="text" placeholder="Add new task..." />
-          <button type="submit">&plus;</button>
+        <form class="task-form"><!--js form-->
+          <input autofocus type="text" aria-label="Enter a new task" placeholder="Add new task..."/> <br>
+          <br>
+          <button type="submit"> &plus; </button> <br>
         </form>
-
-        <ul>
-			<li>
-			  <input type="checkbox" onclick="taskComplete(this)" class="check" />
-			  <input
-				type="text"
-				value="My Task"
-				class="task"
-				onfocus="getCurrentTask(this)"
-				onblur="editTask(this)"
-			  />
-			  <i class="fa fa-trash" onclick="removeTask(this)"></i>
-			</li>
-		  </ul>
+   
+     
     
     <br />
 
 
-<!--buttons-->
+<!--buttons need functionality. another idea is to have a reset and delete by each task-->
     <div class="button">
-      <button
+      <!--<button
         type="button"
         id="save"
         value="save"
         onclick="saveTask()"
       >
         Save and Submit
-      </button>
+      </button>-->
 
       <button
         type="button"
