X'ed out the buttons
X'ed out the buttons.

--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -23,11 +23,11 @@
 
       </form>
 
-        <!--Save and Submit Button-->
-        <button type="button" id="save" value="save" onclick="saveTask()"> Save and Submit </button>
+        <!-- Save and Submit Button
+        <button type="button" id="save" value="save" onclick="saveTask()"> Save and Submit </button>-->
 
         <!--Reset Button-->
-        <button name="button" type="reset" class="resetTask" id="resetTask" value="reset" onclick="resetTask()"> Reset Task List </button>
+        <!--<button name="button" type="reset" class="resetTask" id="resetTask" value="reset" onclick="resetTask()"> Reset Task List </button> -->
         
     </ul>
       </div>
