header works but not nav yet

--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -9,15 +9,15 @@
   <body>
     <div>
       <div>
-    <header class="center">
+    <header className="center">
         <h1>Task List</h1>
     </header>
       </div>
 
     <!--taskList-->
-    <ul class = "center">
-      <div class="container">
-        <form class="form" >
+    <ul className = "center">
+      <div className="container">
+        <form className="form" >
         
         <input autofocus type="text" placeholder="Add new task..." required/>
 
