--- a/src/content/HTML/about.html
+++ b/src/content/HTML/about.html
@@ -4,18 +4,28 @@
     <body>
         <title>Sewing Project Manager </title>
         <!--LEAVE the html alone edit the urls as needed  -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-4 m-4">
-            <a class="navbar-brand" href="http://www.sue-a-darby.com/sewingpm/index.html">📏 Sewing Project Manager
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="about.html">About</span></a>
-                    <a class="nav-link" href="news.html">News</a>
-                    <a class="nav-link" href="welcome.html">Welcome</a>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="dashboard.html">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="project.html">Project</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
                 </div>
             </div>
         </nav>
